force-app/main/default/objects/Opportunity/fields/Contrat_Associe__c.field-meta.xml
<CustomField>
    <fullName>Contrat_Associe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Associé</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>