force-app/main/default/objects/Opportunity/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description
  >Latitude géocodée depuis le champ adresse__c via Nominatim</description>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>