force-app/main/default/objects/Opportunity/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description
  >Longitude géocodée depuis le champ adresse__c via Nominatim</description>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>